# Goldleaves

./: .env.example  .gitattributes  .gitignore  Add-Suffix.ps1  BILLING.md  BILLING_IMPLEMENTATION.md  CNAME  CONTRIBUTING.md  DEPLOY.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  PHASE11_IMPLEMENTATION_SUMMARY.md  README.md  RUNBOOK_DEV.md  USAGE_TRACKING.md  VS_CODE_ONBOARDING.md  __conflict_marker_test__.txt  actionplan.md  auto_concat_conflicts.ps1  billing_example.py  demo_usage_logging.py  demonstrate_usage.py  dependencies.py  docker-compose.yml  example_usage.py  fix-imports.ps1  fix_typing_issues.py  gold-leaves_tree.txt  main.py  merge-queue.ps1  miniquest.md  phase 10 code.md  phase11code.md  phase12code.md  pr-1.md  pyproject.toml  requirements.txt  run_usage_tests.py  sitecustomize.py  (+2 more)
.github/: CODEOWNERS
.gpt/: conflicts-for-gpt.md
.merge_queue/: state.json
.scripts/: drive-merge-queue.ps1  list-conflict-marked-git.ps1  list-conflict-marked.ps1  parse-check.ps1  repo-discovery.ps1  resolve-both.ps1
GPT5coderequests/: alembic_env_essex.py  auth_service_essex.py  backend_services_init_essex.py  billing_event_model_essex.py  conftest_essex.py  core_config_essex.py  core_init_essex.py  core_usage_essex.py  db_database_essex.py  db_session_essex.py  env_example_essex.sh  main_legacy_essex.py  merge_heads_essex.py  migration_002_essex.py  new-module.md  pyproject_toml_essex.txt  requirements_txt_essex.txt  routers_main_essex.py  stack_middleware_essex.py  test_auth_fixture_essex.py  test_billing_smoke_essex.py  test_db_fixture_essex.py  usage_middleware_essex.py  usage_service_essex.py
alembic/: env.py
app/: __init__.py  config.py  dependencies.py  main.py
billing/: __init__.py  stripe.py  stripe_handler.py
core/: builtins_fix.py  config.py  database.py  dependencies.py  email_utils.py  entitlements.py  exceptions.py  logging.py  security.py  security_new.py  storage_config.py  telemetry.py  usage.py  utils.py
docs/: DATABASE_SETUP.md  EMAIL_VERIFICATION_GUIDE.md  REFRESH_TOKEN_GUIDE.md
examples/: document_prediction_demo.py  realtime_integration_example.py
hooks/: pre-commit
infra/: fly.toml
middleware/: __init__.py  request_id.py  stack.py  usage.py
models/: agent.py  auth_router.py  base.py  billing_event.py  case.py  client.py  config.py  (+15 more)
(+421 files in other folders)
