[tool.poetry]
name = "gold-leaves-api"
version = "1.0.0"
description = "Gold Leaves API"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = {extras = ["email"], version = "^2.5.0"}
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
alembic = "^1.12.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

# ===== PYLANCE CONFIGURATION =====
[tool.pylance]
include = ["**/*.py"]
exclude = [".venv", "__pycache__", "*.pyc", "build", "dist", "node_modules"]
extraPaths = ["."]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
autoImportCompletions = true
autoSearchPaths = true
stubPath = ".vscode/stubs"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict_optional = false
warn_return_any = false
warn_unused_ignores = false
disallow_untyped_defs = false
follow_imports = "skip"
show_error_codes = true

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["core", "models", "schemas", "services", "routers", "tests"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
pytest-cov = "^4.1.0"
httpx = "^0.25.2"